# vk-lip

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  render.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt  tests.py
backend/alembic/: env.py
backend/alembic/versions/: 1324a548d82b_add_advanced_opportunity_fields_to_.py  2af0b30098bb_create_assessments_table.py  35aca5809938_add_owner_fields_to_parcels.py  5d8ea4d64322_add_property_type_to_parcels.py  6f0d2e6c4c11_add_neighborhood_to_parcels.py  73e36a59ac3c_add_street_number_street_name_unit_to_.py  88a8d1f3c2a3_remove_gpin_unique_index.py  95e5d2bf2c4a_add_tax_delinquency_fields_to_parcels.py  b5a50e6e2b6e_add_gpin_to_parcels.py  c0819cec8d89_create_parcels_table.py  c4f7f3b6c9d1_add_tax_delinquency_remarks_to_parcels.py  de78e56270e3_create_assessments_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  opportunities.py  parcels.py  routes.py
backend/app/core/: config.py  source_config.py
backend/app/db/: database.py  session.py
backend/app/imports/: __init__.py  base_importer.py  import_assessments.py  import_opportunity_signals.py  import_owners.py  import_parcels.py  import_property_types.py  import_tax_delinquency.py  sync_from_source.py
backend/app/models/: assessment.py  example.py  parcel.py
backend/app/schemas/: parcel.py
backend/app/scoring/: __init__.py  score.py
backend/app/services/: example_service.py  offers.py  scoring.py  seller.py  source_sync.py  zoning.py
backend/app/sources/: __init__.py  base.py  http_json.py
(+25 files in other folders)
